tests/NormalTests/paczka1/small_fuzzy/47322977.err
Error in line 6: 136CQbwRFYV S573 15,2
Error in line 14: EfDWgnkU3m S573 18,5
